--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/mac/Library/Android/sdk
-flutter.sdk=/Users/mac/flutter
+sdk.dir=/Users/user/Library/Android/sdk
+flutter.sdk=/Users/user/flutter
